--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-26  Metin Amiroff  <metin@karegen.com>
+
+	* az.po: Added Azerbaijani translation.
+
 2003-10-26  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
