--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct 26 17:31:46 2003  Tim Janik  <timj@gtk.org>
+
+	* az.po: added to keep beast building.
+
 2003-10-22  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Updated dutch translation. Sorry about 
