--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Oct 26 17:57:43 2003  Tim Janik  <timj@gtk.org>
+
+	* data/bse.pc.in: cvs copied here from ../.
+	* data/sfi.pc.in: cvs copied here from ../.
+
 Sun Oct 26 17:45:52 2003  Tim Janik  <timj@gtk.org>
 
 	* data/.cvsignore:
