Updated Azerbaijani translation.
2003-10-26  Metin Amiroff  <metin@karegen.com>

	* az.po: Updated Azerbaijani translation.

svn path=/trunk/; revision=1463

--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-26  Metin Amiroff  <metin@karegen.com>
+
+	* az.po: Updated Azerbaijani translation.
+
 Sun Oct 26 17:31:46 2003  Tim Janik  <timj@gtk.org>
 
 	* az.po: added to keep beast building.
