--- a/po-bse/az.po
+++ b/po-bse/az.po
@@ -1,103 +1,105 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Beast Azerbaijani translation.
+# Copyright (C) 2003 M…ôtin ∆èmirov
+# This file is distributed under the same license as the beast package.
+# M…ôtin ∆èmirov <metin@karegen.com>, 2003.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: 1\n"
 "POT-Creation-Date: 2003-10-26 17:31+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2003-10-26 21:25+0200\n"
+"Last-Translator: M?tin ?mirov <metin@karegen.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: bse/bsebiquadfilter.c:130
 msgid "Filter"
-msgstr ""
+msgstr "Filtr"
 
 #: bse/bsebiquadfilter.c:132
 msgid "Filter Type"
-msgstr ""
+msgstr "Filtr Nˆv¸"
 
 #: bse/bsebiquadfilter.c:132
 msgid "The filter design type"
-msgstr ""
+msgstr "Filtr T?rtib Nˆv¸"
 
-#: bse/bsebiquadfilter.c:136 bse/bsebiquadfilter.c:144
+#: bse/bsebiquadfilter.c:136
+#: bse/bsebiquadfilter.c:144
 msgid "Center Frequency"
-msgstr ""
+msgstr "M?rk?z Tezliyi"
 
 #: bse/bsebiquadfilter.c:138
 msgid "Cutoff [Hz]"
-msgstr ""
+msgstr "K?sm? [Hz]"
 
 #: bse/bsebiquadfilter.c:146
 msgid "Note"
-msgstr ""
+msgstr "Qeyd"
 
-#: bse/bsebiquadfilter.c:151 bse/bsebiquadfilter.c:156
+#: bse/bsebiquadfilter.c:151
+#: bse/bsebiquadfilter.c:156
 msgid "Emphasis"
-msgstr ""
+msgstr "Emfazis"
 
 #: bse/bsebiquadfilter.c:153
 msgid "Gain [dB]"
-msgstr ""
+msgstr "Gain [dB]"
 
 #: bse/bsebiquadfilter.c:158
 msgid "Norm Type"
-msgstr ""
+msgstr "Norm Nˆv¸"
 
 #: bse/bsebiquadfilter.c:159
-msgid ""
-"The filter gain normalization type (supported only by highpass and lowpass)"
-msgstr ""
+msgid "The filter gain normalization type (supported only by highpass and lowpass)"
+msgstr "Filtr gaini normalla?d?rma nˆv¸"
 
-#: bse/bsebiquadfilter.c:164 bse/bsebiquadfilter.c:170
-#: bse/bsebiquadfilter.c:176 bse/bsebiquadfilter.c:182
+#: bse/bsebiquadfilter.c:164
+#: bse/bsebiquadfilter.c:170
+#: bse/bsebiquadfilter.c:176
+#: bse/bsebiquadfilter.c:182
 msgid "Modulation"
-msgstr ""
+msgstr "Modulyasiya"
 
 #: bse/bsebiquadfilter.c:167
 msgid "Strength of linear frequency modulation"
-msgstr ""
+msgstr "Linear tezlik modulyasiyan?n g¸c¸"
 
 #: bse/bsebiquadfilter.c:173
 msgid "Perform exponential frequency modulation instead of linear"
-msgstr ""
+msgstr "Linear modulyasiya yerin? eksponental tezlik modulyasiyas?n? et"
 
 #: bse/bsebiquadfilter.c:179
 msgid "Number of octaves to be affected by exponential frequency modulation"
-msgstr ""
+msgstr "Eksponental tezlik modulyasiyas?ndan t?siri alan oktav say?"
 
 #: bse/bsebiquadfilter.c:184
 msgid "Gain Modulation [%]"
-msgstr ""
+msgstr "Gain Modulyasiyas? [%]"
 
 #: bse/bsebiquadfilter.c:185
 msgid "Strength of gain modulation"
-msgstr ""
+msgstr "Gain modulyasiyas?n?n g¸c¸"
 
 #: bse/bsebiquadfilter.c:189
 msgid "Unfiltered Audio Signal"
-msgstr ""
+msgstr "Filtrl?nm?mi? Audio Siqnal"
 
 #: bse/bsebiquadfilter.c:191
 msgid "Center Frequency Input"
-msgstr ""
+msgstr "M?rk?z Modulyasiya Giri?i"
 
 #: bse/bsebiquadfilter.c:193
 msgid "Frequency Modulation Input"
-msgstr ""
+msgstr "Tezlik Modulyasiya Giri?i"
 
 #: bse/bsebiquadfilter.c:195
 msgid "Gain Modulation Input"
-msgstr ""
+msgstr "Gain Modulyasiya Giri?i"
 
 #: bse/bsebiquadfilter.c:197
 msgid "Filtered Audio Signal"
-msgstr ""
+msgstr "Filtrl?nmi? Audio Siqnal"
+
