Fixed encoding error.
2003-10-26  Metin Amiroff  <metin@karegen.com>

	* az.po: Fixed encoding error.

svn path=/trunk/; revision=1464

--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,5 +1,9 @@
 2003-10-26  Metin Amiroff  <metin@karegen.com>
 
+	* az.po: Fixed encoding error.
+
+2003-10-26  Metin Amiroff  <metin@karegen.com>
+
 	* az.po: Updated Azerbaijani translation.
 
 Sun Oct 26 17:31:46 2003  Tim Janik  <timj@gtk.org>
