--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-27  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added one more entry and a comment.
+	* POTFILES.skip: Added this.
+	* sv.po: Updated Swedish translation.
+
 2003-10-26  Metin Amiroff  <metin@karegen.com>
 
 	* az.po: Fixed encoding error.
