--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-27  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2003-10-27  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.skip: Added this.
