--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct 27 20:46:50 2003  Tim Janik  <timj@gtk.org>
+
+	* ru.po: added russian translation from Alexandre Prokoudine <avp@altlinux.ru>.
+
 2003-10-27  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
