disable non-working script entries.
Mon Oct 27 20:59:24 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstpartdialog.c (popup_entries): disable non-working script entries.

        * configure.in (ALL_LINGUAS): added russian translation.
        added note for translators about needing po files in po/ and po-bse/,
        suggested by Hasbullah Bin Pit.

svn path=/trunk/; revision=1480

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Support NetBSD sound device names [Ben Collver]
 * Added i18n infrastrukture for BEAST and BSE [Christian Neumair, Tim Janik]
 * Added Azerbaijani translation [Metin Amiroff]
+* Added Russian translation [Alexandre Prokoudine]
 * Added Serbian translation [Danilo Segan]
 * Added Swedish translation [Christian Rose]
 * Added German translation [Christian Neumair]
