--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Oct 27 20:59:24 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstpartdialog.c (popup_entries): disable non-working script entries.
+
+	* configure.in (ALL_LINGUAS): added russian translation.
+	added note for translators about needing po files in po/ and po-bse/,
+	suggested by Hasbullah Bin Pit.
+
 Mon Oct 27 19:55:27 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstfiledialog.c: ensure custom effects and instrument paths
