--- a/TODO
+++ b/TODO
@@ -1,18 +1,15 @@
 FIXMES:
+- provide proper stock effect
+- provide proper stock instrument
 - compressor gui: http://www.samsonwireless.net/store/product.asp?sku=EM.CLX-440&nav=m
 - migrate artscompressor threshold/output to dB (keep compat code)
 - introduce Volume() pspec type in idl files that the GUI can provide a dB slider for
 - fix syndrum parameter scale
-- provide proper stock effect
-- provide proper stock instrument
 - upon project playback-stop, discard all pending events (at least note-on+note-off) on its midi receiver
-- check button3 /Tools/ menu in piano rool editor
-- fix pianoroll/Test menu
+- add piano roll scripts and offer those in pianoroll button3 menu
 - registering the same procedure twice triggers a g_warning()
 - document bse_item_check_is_a(), remove bse_object_is_a() from bse-procs
 - fix forcing unique names for children of a project 
-- check whether */icons/Makefile.icons is included in dist tarball
-- check whether plugins/Makefile.plugins is included in dist tarball
 - add new test song containing a wave track so the internal wave csynth is properly testet
 - File/Open should merge if issued on an empty project
 - add author and license information to module types just like we do for procedures
