--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct 27 22:43:10 2003  Tim Janik  <timj@gtk.org>
+
+	* configure.in: throw out 0.5.5, interface 0, binary 0.
+
 Mon Oct 27 22:39:57 2003  Tim Janik  <timj@gtk.org>
 
 	* library/effects/atan-canyon.bse: new effect.
