--- a/docs/site-historic.texi
+++ b/docs/site-historic.texi
@@ -21,6 +21,7 @@ submissions, which can still be found on the
 
 Finally, here's a collection of past articles related to BEAST:
 @itemize
+@item @uref{http://www.linux-user.de/ausgabe/2003/11/032-beast/, German BEAST Workshop}
 @item @uref{http://www.linuxjournal.com/article.php?sid=4349,About the Mod}
 @item @uref{http://www.kuro5hin.org/story/2002/6/8/2524/90038,Trackers and Linux}
 @item @uref{http://www.fosdem.org/index/interviews/interviews_steiner,Interview with Jakub 'Jimmac' Steiner}
