--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -62,7 +62,7 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/apr01/articles/synthsecrets.asp,,Part24}
 	@uref{http://www.soundonsound.com/sos/may01/articles/synthsecrets.asp,,Part25}
 	@uref{http://www.soundonsound.com/sos/jun01/articles/synthsecrets.pt26.asp,,Part26}
-	Broken @c Broken: @uref{http://www.soundonsound.com/sos/jul01/articles/synthsec.asp,,Part27}
+	@uref{http://www.soundonsound.com/sos/jul01/articles/synthsecrets27.asp,,Part27}
 	@uref{http://www.soundonsound.com/sos/aug01/articles/synthsecrets28.asp,,Part28}
 	@uref{http://www.soundonsound.com/sos/sep01/articles/synthsecrets29.asp,,Part29}
 	@uref{http://www.soundonsound.com/sos/oct01/articles/synthsecrets30.asp,,Part30}
@@ -86,6 +86,9 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/Feb03/articles/synthsecrets46.asp,,Part46}
 	@uref{http://www.soundonsound.com/sos/Mar03/articles/synthsecrets47.asp,,Part47}
 	@uref{http://www.soundonsound.com/sos/apr03/articles/synthsecrets48.asp,,Part48}
+	@uref{http://www.soundonsound.com/sos/May03/articles/synthsecrets49.asp,,Part49}
+	@c @uref{http://www.soundonsound.com/sos/Jun03/articles/synthsecrets50.asp,,Part50}
+	@c @uref{http://www.soundonsound.com/sos/Jul03/articles/synthsecrets51.asp,,Part51}
 @end itemize
 
 
