--- a/docs/site-oldnews.texi
+++ b/docs/site-oldnews.texi
@@ -11,6 +11,56 @@
 @unnumbered What Was New? (Ancient News)
 
 
+@newsTitle{Tuesday 22 Jul 2003, BEAST Realease [Velocity Edit]}
+
+BEAST/BSE version 0.5.4 is available in the
+@uref{beast-doc://download,,download section}.
+@c here is the
+@c @uref{http://gnomedesktop.org/article.php?sid=1182,,FootNotes announcement}.
+
+Tarball:
+@uref{http://beast.gtk.org/beast-ftp/v0.5/beast-0.5.4.tar.gz,, beast-0.5.4.tar.gz}
+and patch:
+@uref{http://beast.gtk.org/beast-ftp/v0.5/patch-beast-0.5.3-0.5.4.bz2,, patch-beast-0.5.3-0.5.4.bz2}.
+
+Newly added features in this release involve a drum module, velocity-,
+fine-tune- and control-event-editing in songs and support for post-processing
+effects in songs.
+The details are outlined in the
+@uref{beast-doc://release-news,,NEWS section}.
+
+
+@newsTitle{Friday 18 Jul 2003, BEAST RPM Packages}
+
+After visiting the @beast talk at LinuxTag 2003,
+@uref{mailto://gwaluga@@computerbraxas.de,,Gregor Waluga} 
+wrote a small
+@uref{http://linux.waluga.de/beast/BEAST-installation under-SuSE 82.txt,,HOWTO (english and german)}
+about getting @beast to run under SuSE 8.2.
+Assorted RPMs build by him are available from the
+@uref{beast-doc://download,, Download section}.
+
+
+@newsTitle{Thursday 10 Jul 2003, BEAST IRC Channel & LinuxTag 2003}
+
+Stefan Westerfeld and Tim Janik are going to the
+@uref{http://www.linuxtag.org/2003/en/index.html,,LinuxTag 2003}
+this Weekend (11.-13. July). We'll probably hang out at the GNOME
+and KDE booths if people want to catch us to talk about @beast{},
+@uref{http://www.arts-project.org,,aRts} or
+@uref{http://sfk.evilplan.org/csl/,,CSL}.
+
+A
+@uref{beast-doc://overview-de,, german paper accompanying the BEAST talk}
+held at LinuxTag has been added to our
+@uref{beast-doc://documentation,, Documentation section}.
+
+If we're not hanging out at LinuxTag, you may also join us for a chat on
+the @code{#beast} channel on the GimpNet IRC Network. The
+@uref{beast-doc://contact,, Contact section}
+has more details if you're not familiar with IRC yet.
+
+
 @newsTitle{Wednesday 25 Jun 2003, BEAST Bugfix Realease}
 
 BEAST/BSE version 0.5.3 is available in the
