Added Catalan translation by Xavier Conde Rueda <xaviconde@eresmas.com>.
svn path=/trunk/; revision=1489

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-28  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Added Catalan translation by
+	Xavier Conde Rueda <xaviconde@eresmas.com>.
+
 Mon Oct 27 20:46:50 2003  Tim Janik  <timj@gtk.org>
 
 	* ru.po: added russian translation from Alexandre Prokoudine <avp@altlinux.ru>.
