Updated Serbian translation.
2003-11-01  Danilo Å egan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

svn path=/trunk/; revision=1494

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-01  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2003-10-28  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Added Catalan translation by
