--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-02  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added a missing file.
+	* sv.po: Updated Swedish translation.
+
 2003-11-01  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
